# Voltaris

./: .gitignore  README.md
backend/: README.md  __init__.py  db.py  main.py  projects.py  pyproject.toml  requirements.txt  runner.py  watcher.py  ws.py
backend/data/: README.md
backend/prompts/: orchestrator.md
backend/prompts/agents/: architect.md  change-analyzer.md  circuit-designer.md  component-selector.md  design-reviewer.md  ir-compiler.md  netlist-builder.md  report-writer.md  requirement-analyzer.md
backend/prompts/refs/: CircuitIR.md  example.thinir.yaml
backend/providers/: __init__.py  base.py  claude.py  codex.py
backend/tests/: test_file_editing.py  test_providers.py  test_runner.py
backend/tools/: lcsc_lookup.py  validate.py
data/: pcb.sqlite
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  brief.ts  main.tsx  styles.css  types.ts  ws.ts
frontend/src/components/: ChatPanel.tsx  MarkdownPreview.tsx  PhaseProgress.tsx  ProjectList.tsx  ResizeHandle.tsx  RunStatusBar.tsx
