[project]
name = "pcb-system-backend"
version = "0.1.0"
description = "AI-assisted PCB schematic design — backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "aiosqlite>=0.20",
  "watchfiles>=0.24",
  "pydantic>=2.9",
  "python-multipart>=0.0.12",
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]
